# python-project-83

./: Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: pyci.yml
page_analyzer/: app.py  database.py  database_queries.py  meneger.py  parser.py  validator.py
page_analyzer/templates/: base.html  error.html  footer.html  header.html  index.html  not_found.html  show_url.html  urls.html
page_analyzer/templates/components/: form.html  message.html
