[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Eugene Anisimov <zero0061@mail.ru>"]
readme = "README.md"
packages = [
    { include = "page_analyzer" },
]

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^22.0.0"
flask = "^3.0.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
gunicorn = "^22.0.0"
flask = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
